resources/assets/scss/_cart.scss
/* ... */
.cart-bag-img{
    @media (max-width: 767px){
        width: 120px;
    }
}

.cart-loader.speed-in{
    .cart-loader__wrapper{
        display: flex;
        overflow: hidden;
    }
}

.cart-loader__wrapper{
    display: none;
    top: 0;
    position: fixed;
    z-index: 999999;
    align-items: center;
    justify-content: center;
    width: 80%;
    height: 100%;
    text-align: center;
    background-color: rgba(255, 255, 255, 0.93);
    @include MQ(M) {
        width: 400px;
    }
    @media (max-width: 767.98px) {
        width: 100% !important;
    }
    @media (min-width: 992px) and (min-width: 1199.98px) {
        width: 40% !important;
    }
    @media (min-width: 1300px) {
        width: 30% !important;
    }    
}

.modal-close-icon{
    font-weight: 100;
    font-size: 1.6em;
    color: rgba(82, 82, 82, 0.55);
}

.cart-step1-header{
    margin: -10px -20px 0 -20px;
}

.priceRange{
    .irs-line-left{
        left: 5px;
    }
    .irs-line-right{
        right: 5px;
    }
}

.rotate-svg {
  animation: rotation 1.3s infinite linear;
  transform-origin: 30px 30px;
  animation-timing-function:linear;
}



@-webkit-keyframes rotation {
  from {
    -webkit-transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
  }
}

@-moz-keyframes rotation {
  from {
    -moz-transform: rotate(0deg);
  }
  to {
    -moz-transform: rotate(360deg);
  }
}

@-ms-keyframes rotation {
  from {
    -ms-transform: rotate(0deg);
  }
  to {
    -ms-transform: rotate(360deg);
  }
}

@-o-keyframes rotation {
  from {
    -o-transform: rotate(0deg);
  }
  to {
    -o-transform: rotate(360deg);
  }
}

@keyframes rotation {
  from {
    -webkit-transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
  }
}

.promotion-alert{
    font-size: 1.05em;
    .info-circle{
        font-size: 1.15em;
    }
}

.final-summary{
    label{
        font-size: 0.9rem;
    }
}

@keyframes shiftRight {
  0% {
    right: -100%;
  }
  100% {
    right: 0;
  }
}

// coupon code box

.coupon-box{
    padding: 1em;
    border: 0;
    box-shadow: 0 0 4px #e0e0e0;
    line-height: 1.6;
    transition: all 0.3s;
    &__code{
        font-size: 1.15em;
    }
    .radio-selection{
        color: #9a9a9a;
        font-size: 1.35em;
    }
    &:hover{
        color: initial;
        background-color: #fffad9;
    }
    .custom-size{
        font-size: 1.15em;
    }
    .new-label{
        padding: 3px 0.5em;
        margin: 0;
        font-size: 0.8em;
        letter-spacing: 0.5px;
    }
}

.coupon-radio{
    &:checked{
        & + .radio-label{
            color: initial;
            background-color: #fffad9;
            // .radio-selection{
            //     color: #166f61;
            // }
        }
    }
}

.coupon-title{
    font-size: 1.15em;
}

.coupon-valid{
    .coupon-box__code{
        display: inline-flex;
        background-color: #fff;
        border: 1px dashed #8e8e8e;
        padding: 5px 1.5em;
        border-radius: 25px;
        margin-bottom: 5px;
        margin-top: -3px;
    }
}

.coupon-invalid{
    pointer-events: none;
    .coupon-box{
        background-color: #efefef;
        border-color: #d2d2d2;
        color: #808080;
        .radio-selection{
            color: #ddd;
            visibility: hidden;
        }
        .text-success{
            color: #808080 !important;
        }
    }
}

